--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,23 @@ body {
 }
 
 .logo{
+  position: relative;
   font-size: 25px;
   color: black;
   text-decoration: none;
   font-weight: 680;
+} 
+
+.logo::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: .4s;
 }
 
 .navbar a {
@@ -68,28 +81,125 @@ body {
   max-width: 600px;
 } */
 
+.home-image {
+  position: absolute;
+  top: 8;
+  right: 0;
+  left: 60%;
+  width: 30%; /* Adjust the width as per your preference */
+  height: 50%;
+  background-image: url(./assets/profile.png); /* Replace with the path to your image */
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.home-imgHover {
+  position: absolute;
+  top: 8;
+  right: 0;
+  width: 50%; /* Adjust the width as per your preference */
+  height: 50%;
+  background: transparent;
+  transition: 3s;
+}
+.home-imgHover:hover{
+  background: white;
+  opacity: .8;
+}
+
+.home-imgHover::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  animation: showRight 1s ease forwards;
+  animation-delay: 2.4s;
+  z-index: 100;
+}
+
+
+
+
+
 .home-content h1{
+  position: relative;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.3;
 }
 
-.home-content h3{
+.home-content h1::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1s;
+}
+
+.home-content h3 {
+  position: relative;
   font-size: 32px;
   font-weight: 700;
 }
 
+.home-content h3::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1.3s;
+}
+
+
 .home-content p{
+  position: relative;
   margin: 20px 0 40px;
   font-size: 16px;
   max-width: 650px;
 }
 
+.home-content p::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1.6s;
+}
+
 .home-content .btn-box{
+  position: relative;
   display: flex; 
   justify-content: space-between;
   width: 345px;
   height: 50px;
+}
+
+.home-content .btn-box::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1.9s;
+  z-index: 2;
 }
 
 .btn-box a{
@@ -143,9 +253,22 @@ body {
 .home-sci {
   position: absolute;
   bottom: 40px;
-  width: 170px;
+  width: 250px;
   display: flex;
   justify-content: space-between;
+}
+
+.home-sci::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 2.1s;
+  z-index: 2;
 }
 .home-sci a{
   position: relative;
@@ -166,13 +289,14 @@ body {
   transform: scale(1.1) translateY(-5px);
 }
 
+
 .home-sci a:hover::after {
   content: attr(data-social);
   position: absolute;
-  bottom: -25px;
+  bottom: -30px;
   left: 50%;
   transform: translateX(-50%);
-  padding: 5px 10px;
+  padding: 5px 12px;
   /* background-color: #000; */
   color: black;
   font-size: 14px;
@@ -186,3 +310,11 @@ body {
 }
  
 
+
+/* KEYFRAMES ANIMATION */
+
+@keyframes showRight {
+  100%{
+    width: 0;
+  }
+}
