--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,320 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  background-color: white;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+}
+
+.logo{
+  position: relative;
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
+  font-weight: 680;
+} 
+
+.logo::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: .4s;
+}
+
+.navbar a {
+  font-size: 18px;
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 35px;
+  position: relative; /* Add position relative to create a stacking context */
+}
+
+.navbar a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -3px; /* Adjust the value to position the line */
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transform: scaleX(0); /* Initially set the line width to 0 */
+  transform-origin: left; /* Set the origin to the left for scaling effect */
+  transition: transform 0.3s ease; /* Add a transition effect */
+}
+
+.navbar a:hover::after,
+.navbar a.active::after {
+  transform: scaleX(1); /* Scale the line width to 100% on hover/active */
+}
+
+.home{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding: 0 10%;
+}
+
+/* .home-content{
+  max-width: 600px;
+} */
+
+.home-image {
+  position: absolute;
+  top: 8;
+  right: 0;
+  left: 60%;
+  width: 30%; /* Adjust the width as per your preference */
+  height: 50%;
+  background-image: url(./assets/profile.png); /* Replace with the path to your image */
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.home-imgHover {
+  position: absolute;
+  top: 8;
+  right: 0;
+  width: 50%; /* Adjust the width as per your preference */
+  height: 50%;
+  background: transparent;
+  transition: 3s;
+}
+.home-imgHover:hover{
+  background: white;
+  opacity: .8;
+}
+
+.home-imgHover::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  animation: showRight 1s ease forwards;
+  animation-delay: 2.4s;
+  z-index: 100;
+}
+
+
+
+
+
+.home-content h1{
+  position: relative;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.3;
+}
+
+.home-content h1::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1s;
+}
+
+.home-content h3 {
+  position: relative;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.home-content h3::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1.3s;
+}
+
+
+.home-content p{
+  position: relative;
+  margin: 20px 0 40px;
+  font-size: 16px;
+  max-width: 650px;
+}
+
+.home-content p::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1.6s;
+}
+
+.home-content .btn-box{
+  position: relative;
+  display: flex; 
+  justify-content: space-between;
+  width: 345px;
+  height: 50px;
+}
+
+.home-content .btn-box::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 1.9s;
+  z-index: 2;
+}
+
+.btn-box a{
+  position: relative;
+  display: inline-flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  width: 150px;
+  height: 100%;
+  background: black ;
+  border: 3px solid black;
+  border-radius: 8px;
   color: white;
+  text-decoration: none;
+  font-weight: 600;
+  letter-spacing: 1px;
+  z-index: 1;
+  overflow: hidden;
+  transition: 0.5s;
+
+}
+.btn-box a:hover{
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+/* .btn-box a:nth-child(2){
+  background: transparent;
+  color: black;
+}
+.btn-box a:nth-child(2)::before{
+  background: black;  
+}
+.btn-box a:nth-child(2):hover{
+  color: white;
+} */
+.btn-box a::before{
+  content: '';
+  position: absolute;
+  top:0;
+  left:0;
+  width: 0;
+  height: 100%;
+  background: white;
+  z-index: -1;
+  transition:  0.5s;
+}
+.btn-box a:hover::before{
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.home-sci {
+  position: absolute;
+  bottom: 40px;
+  width: 250px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-sci::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  animation: showRight 1s ease forwards;
+  animation-delay: 2.1s;
+  z-index: 2;
+}
+.home-sci a{
+  position: relative;
+  display: inline-flex;
+  justify-self: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  /* border: 2px solid black; */
+  /* border-radius: 50%; */
+  font-size: 30px;
+  color: black;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+}
+.home-sci a:hover{
+  transform: scale(1.1) translateY(-5px);
+}
+
+
+.home-sci a:hover::after {
+  content: attr(data-social);
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 5px 12px;
+  /* background-color: #000; */
+  color: black;
+  font-size: 14px;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.home-sci a:hover::after {
+  opacity: 1;
+}
+ 
+
+
+/* KEYFRAMES ANIMATION */
+
+@keyframes showRight {
+  100%{
+    width: 0;
   }
 }
