--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   padding: 20px;
-  background-color: white;
+  background-color: white transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -72,7 +72,7 @@
   transform: scaleX(1); /* Scale the line width to 100% on hover/active */
 }
 
-.home {
+section {
   height: 100vh;
 }
 
@@ -84,6 +84,8 @@
   text-align: center;
   height: 100%;
   /* padding: 0 10%; */
+  border-bottom: yellow 1px solid;
+  overflow: hidden;
 }
 
 .home-content h1 {
@@ -96,7 +98,6 @@
   white-space: nowrap; /* Prevent line breaks */
   text-align: center; /* Horizontally center the text */
 }
-
 
 .home-content h1::before {
   content: "";
@@ -285,4 +286,55 @@
   100% {
     width: 0;
   }
+}
+
+.quote-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  /* padding: 0 10%; */
+  border-bottom: yellow 1px solid;
+  background-color: yellow ;
+}
+
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  /* padding: 0 10%; */
+  border-bottom: #00cc7f 1px solid;
+  background-color: #00cc7f ;
+}
+
+
+.project-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  /* padding: 0 10%; */
+  border-bottom: #52cdc9 1px solid;
+  background-color: #52cdc9 ;
+}
+
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  /* padding: 0 10%; */
+  border-bottom: white 1px solid;
+  background-color: white ;
 }
