--- a/src/App.css
+++ b/src/App.css
@@ -297,9 +297,8 @@ section {
   height: 100%;
   /* padding: 0 10%; */
   border-bottom: yellow 1px solid;
-  background-color: yellow ;
+  background-color: yellow;
 }
-
 
 .about-content {
   display: flex;
@@ -310,9 +309,8 @@ section {
   height: 100%;
   /* padding: 0 10%; */
   border-bottom: #00cc7f 1px solid;
-  background-color: #00cc7f ;
+  background-color: #00cc7f;
 }
-
 
 .project-content {
   display: flex;
@@ -323,11 +321,10 @@ section {
   height: 100%;
   /* padding: 0 10%; */
   border-bottom: #52cdc9 1px solid;
-  background-color: #52cdc9 ;
+  background-color: #52cdc9;
 }
 
-
-.footer-content {
+.contact-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -336,5 +333,5 @@ section {
   height: 100%;
   /* padding: 0 10%; */
   border-bottom: white 1px solid;
-  background-color: white ;
+  background-color: white;
 }
