--- a/src/App.css
+++ b/src/App.css
@@ -296,7 +296,6 @@ section {
   text-align: center;
   height: 100%;
   /* padding: 0 10%; */
-  border-bottom: yellow 1px solid;
   background-color: yellow;
 }
 
@@ -308,7 +307,6 @@ section {
   text-align: center;
   height: 100%;
   /* padding: 0 10%; */
-  border-bottom: #00cc7f 1px solid;
   background-color: #00cc7f;
 }
 
@@ -320,7 +318,6 @@ section {
   text-align: center;
   height: 100%;
   /* padding: 0 10%; */
-  border-bottom: #52cdc9 1px solid;
   background-color: #52cdc9;
 }
 
@@ -332,6 +329,5 @@ section {
   text-align: center;
   height: 100%;
   /* padding: 0 10%; */
-  border-bottom: white 1px solid;
-  background-color: white;
+  background-color: black;
 }
